--- a/index.html
+++ b/index.html
@@ -36,26 +36,40 @@
     <div class="row">
       <div class="col-md-6">
         <form id="price-show">
-          <h2>Toppings:</h2>
-            <div class="form-group movies">
-              <label for="movies">Choose what movie you want to see</label>
-              <select class="form-control" id="movies">
-                <option>Uncut Gems</option>
-                <option>1917</option>
-                <option>Parasite</option>
-              </select>
-            </div>
-          <h2>Size:</h2>
-          <div class="form-group times">
-            <label for="times">Choose what time you want to see your movie</label>
-            <select class="form-control" id="times">
-              <option>9:00 am</option>
-              <option>1:00 pm</option>
-              <option>7:30 pm</option>
-            </select>
-          </div>
-          <div>
-              <button type="submit" class="btn-secondary price-btn">Order</button>
+          <div class="form-check">
+            <h2>Toppings:</h2>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Mushrooms
+            </label>
+            <br>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Peppers
+            </label>
+            <br>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Extra Cheese
+            </label>
+            <h2>Size</h2>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Medium
+            </label>
+            <br>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Large
+            </label>
+            <br>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Zaza
+            </label>
+            <br>
+            <br>
+            <button type="submit" class="btn-secondary price-btn">Order</button>
           </div>
          </form>
         <div id="price-results">
