add background gif and some styling.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style>
     body {
-      background-image: href="img/cheese.gif";
+      /* background-image: href="img/cheese.gif"; */
+      /* background-image: url('cheese.gif'); */
+      background-image: url('https://media.giphy.com/media/QRVDMhRYMut56/giphy.gif');
+      background-repeat:repeat;
+      /* background-size: cover; */
+      /* height: 100vh;
+      padding:0;
+      margin:0; */
     }
   </style>
   <link rel="stylesheet"
@@ -31,13 +38,13 @@
   <title>Pizza Parlor</title>
 </head>
 <body class="background">
-  <div class="container">
-    <h1>Zaza's Za</h1>
+  <div class="container text">
+    <h1 class="header">Zaza's Za</h1>
     <div class="row">
       <div class="col-md-6">
         <form id="price-show">
           <div class="form-check">
-            <h2>Toppings:</h2>
+            <h2>Toppings</h2>
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
               Mushrooms
@@ -52,6 +59,8 @@
             <label class="form-check-label" for="defaultCheck1">
               Extra Cheese
             </label>
+            <br>
+            <br>
             <h2>Size</h2>
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
