add one test rule in a prototype method to show price. Not working currently.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       /* background-image: href="img/cheese.gif"; */
       /* background-image: url('cheese.gif'); */
-      background-image: url('https://media.giphy.com/media/QRVDMhRYMut56/giphy.gif');
+      /* background-image: url('https://media.giphy.com/media/QRVDMhRYMut56/giphy.gif'); */
       background-repeat:repeat;
       /* background-size: cover; */
       /* height: 100vh;
