--- a/index.html
+++ b/index.html
@@ -46,34 +46,34 @@
     <form id="price-show">
       <div class="form-check checkbox">
         <h2>Toppings</h2>
-        <input class="form-check-input" type="checkbox" value="" id="mushrooms">
+        <input class="form-check-input" type="checkbox" value="toppings" id="mushrooms">
         <label class="form-check-label" for="defaultCheck1">
           Mushrooms
         </label>
         <br>
-        <input class="form-check-input" type="checkbox" value="" id="peppers">
+        <input class="form-check-input" type="checkbox" value="toppings" id="peppers">
         <label class="form-check-label" for="defaultCheck1">
           Peppers
         </label>
         <br>
-        <input class="form-check-input" type="checkbox" value="" id="extracheese">
+        <input class="form-check-input" type="checkbox" value="toppings" id="extracheese">
         <label class="form-check-label" for="defaultCheck1">
           Extra Cheese
         </label>
       </div>
       <div class="form-check checkbox2">
         <h2>Size</h2>
-        <input class="form-check-input" type="checkbox" value="" id="medium">
+        <input class="form-check-input" type="checkbox" value="size" id="medium">
         <label class="form-check-label" for="defaultCheck1">
           Medium
         </label>
         <br>
-        <input class="form-check-input" type="checkbox" value="" id="large">
+        <input class="form-check-input" type="checkbox" value="size" id="large">
         <label class="form-check-label" for="defaultCheck1">
           Large
         </label>
         <br>
-        <input class="form-check-input" type="checkbox" value="" id="zaza">
+        <input class="form-check-input" type="checkbox" value="size" id="zaza">
         <label class="form-check-label" for="defaultCheck1">
           Zaza
         </label>
