--- a/index.html
+++ b/index.html
@@ -45,42 +45,31 @@
     <h1 class="header">Zaza's Za</h1>
     <form id="price-show">
       <div class="form-check checkbox">
-        <h2>Toppings</h2>
-        <input class="form-check-input" type="checkbox" value="toppings" id="mushrooms">
-        <label class="form-check-label" for="defaultCheck1">
-          Mushrooms
-        </label>
-        <br>
-        <input class="form-check-input" type="checkbox" value="toppings" id="peppers">
-        <label class="form-check-label" for="defaultCheck1">
-          Peppers
-        </label>
-        <br>
-        <input class="form-check-input" type="checkbox" value="toppings" id="extracheese">
-        <label class="form-check-label" for="defaultCheck1">
-          Extra Cheese
-        </label>
-      </div>
-      <div class="form-check checkbox2">
-        <h2>Size</h2>
-        <input class="form-check-input" type="checkbox" value="size" id="medium">
-        <label class="form-check-label" for="defaultCheck1">
-          Medium
-        </label>
-        <br>
-        <input class="form-check-input" type="checkbox" value="size" id="large">
-        <label class="form-check-label" for="defaultCheck1">
-          Large
-        </label>
-        <br>
-        <input class="form-check-input" type="checkbox" value="size" id="zaza">
-        <label class="form-check-label" for="defaultCheck1">
-          Zaza
-        </label>
-        <br>
-        <br>
-        <button type="submit" class="btn-secondary price-btn">Order</button>
-      </div>
+        <div class="form-check checkbox">
+          <h2>Toppings</h2>
+          <input class="form-check-input" type="checkbox" name="toppings" value="mushrooms" id="mushrooms">
+          Mushrooms ($0.25)
+          <br>
+          <input class="form-check-input" type="checkbox" name="toppings" value="peppers" id="peppers">
+          Mama Lil's Peppers ($0.50)
+          <br>
+          <input class="form-check-input" type="checkbox" name="toppings" value="extracheese" id="extracheese">
+          Extra Cheese ($0.75)
+        </div>
+        <div class="form-check checkbox2">
+          <h2>Size</h2>
+          <input class="form-check-input" type="checkbox" name="sizes" value="medium" id="medium">
+          Medium ($8)
+          <br>
+          <input class="form-check-input" type="checkbox" name="sizes" value="large" id="large">
+          Large ($11)
+          <br>
+          <input class="form-check-input" type="checkbox" name="sizes" value="zaza" id="zaza">
+          Zaza ($15)
+          <br>
+          <br>
+          <button type="submit" class="btn-secondary price-btn">Order</button>
+        </div>
     </form>
     <div id="price-results">
     </div>
