try to get price calculation to work when more than one checkbox is clicked.

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
       <div class="form-check checkbox">
         <div class="form-check checkbox">
           <h2>Toppings</h2>
-          <input class="form-check-input" type="checkbox" name="toppings" value="mushrooms" id="mushrooms">
+          <input class="form-check-input" type="checkbox" name="toppings" value="0.25" id="mushrooms">
           Mushrooms ($0.25)
           <br>
-          <input class="form-check-input" type="checkbox" name="toppings" value="peppers" id="peppers">
+          <input class="form-check-input" type="checkbox" name="toppings" value="0.50" id="peppers">
           Mama Lil's Peppers ($0.50)
           <br>
-          <input class="form-check-input" type="checkbox" name="toppings" value="extracheese" id="extracheese">
+          <input class="form-check-input" type="checkbox" name="toppings" value="0.75" id="extracheese">
           Extra Cheese ($0.75)
         </div>
-        <div class="form-check checkbox2">
+        <div class="form-check checkbox2" id="sizes">
           <h2>Size</h2>
           <input class="form-check-input" type="checkbox" name="sizes" value="medium" id="medium">
           Medium ($8)
@@ -72,6 +72,8 @@
         </div>
     </form>
     <div id="price-results">
+    </div>
+    <div id="sum">
     </div>
   </div>
 </body>
