--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
         Extra Cheese ($0.75)
       </div>
       <div class="form-check checkbox2">
+        <h2>Sizes</h2>
+        <input class="form-check-input" type="radio" name="exampleRadios" id="medium" value="medium" checked>
+        <label class="form-check-label" for="exampleRadios1">
+          Medium ($8)
+        </label>
+        <br>
+        <input class="form-check-input" type="radio" name="exampleRadios" id="large" value="large">
+        <label class="form-check-label" for="exampleRadios2">
+          Large ($11)
+        </label>
+        <br>
+        <input class="form-check-input" type="radio" name="exampleRadios" id="zaza" value="zaza">
+        <label class="form-check-label" for="exampleRadios2">
+          Zaza ($15)
+        </label>
+        <br>
+        <br>
+        <button type="submit" class="btn-secondary price-btn">Order</button>
+      </div>
+      <!-- <div class="form-check checkbox2">
         <h2>Size</h2>
         <input class="form-check-input" type="checkbox" name="sizes" value="medium" id="medium">
         Medium ($8)
@@ -68,7 +88,7 @@
         <br>
         <br>
         <button type="submit" class="btn-secondary price-btn">Order</button>
-      </div>
+      </div> -->
     </form>
     <div id="price-results">
     </div>
