playing around with styling and trying to center checkbox and radio buttons side by side.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
       margin: 0; /* recommended */
     }
   </style>
-  <link rel="stylesheet"
+  <!-- <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"> <link href="css/styles.css" rel="stylesheet"
+      crossorigin="anonymous">  -->
+      <link href="css/styles.css" rel="stylesheet"
       type="text/css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -32,10 +33,10 @@
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
       crossorigin="anonymous"></script>
-    <script
+    <!-- <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="js/scripts.js"></script>
   <title>Pizza Parlor</title>
@@ -44,7 +45,7 @@
   <div class="container text">
     <h1 class="header">Zaza's Za</h1>
     <form id="price-show" name="pizzaorder">
-      <div class="form-check checkbox">
+      <div class="form-check checkbox box">
         <h2>Toppings</h2>
         <input class="form-check-input" type="checkbox" name="toppings" value="mushrooms" id="mushrooms">
         Mushrooms ($0.25)
@@ -55,7 +56,7 @@
         <input class="form-check-input" type="checkbox" name="toppings" value="extracheese" id="extracheese">
         Extra Cheese ($0.75)
       </div>
-      <div class="form-check checkbox2">
+      <div class="form-check checkbox2 box">
         <h2>Sizes</h2>
         <input class="form-check-input" type="radio" name="exampleRadios" id="medium" value="medium" checked>
         <label class="form-check-label" for="exampleRadios1">
