--- a/index.html
+++ b/index.html
@@ -6,55 +6,47 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+
+  <link rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+  crossorigin="anonymous">
+  <link href="css/styles.css" rel="stylesheet"
+  type="text/css">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+po T4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+  crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script
+  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+  crossorigin="anonymous"></script>
+  <script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script src="js/scripts.js"></script>
 
   <style>
     body {
-      /* background-image: href="img/cheese.gif"; */
-      /* background-image: url('cheese.gif'); */
-      /* background-image: url('https://media.giphy.com/media/QRVDMhRYMut56/giphy.gif'); */
+      background-image: url('https://media.giphy.com/media/QRVDMhRYMut56/giphy.gif');
       background-repeat:repeat;
-      /* background-size: cover; */
-      /* height: 100vh;
-      padding:0;
-      margin:0; */
     }
   </style>
-
-
-<!------ Include the above in your HEAD tag ---------->
-    <link rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous">
-      <link href="css/styles.css" rel="stylesheet"
-      type="text/css">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"></script>
-   <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="js/scripts.js"></script>
+<!------ Include the above in your HEAD tag ----------> 
   <title>Pizza Parlor</title>
 </head>
 <div class="container">
   <h1 class="header">Zaza's Za</h1>
-  <h3 class="header2">Please order one pizza</h3>
   <form id="price-show" name="pizzaorder">
   <div class="row">
     <div class="col-md-6">
       <div class="card" style="margin:50px 0"> 
         <!-- Default panel contents -->
-        <div class="card-header">Size</div>
+        <div class="card-header">Size (Choose One)</div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item"> Medium  ($8)
             <label class="switch ">
@@ -76,8 +68,7 @@
     </div>
     <div class="col-md-6">
       <div class="card" style="margin:50px 0"> 
-        <!-- Default panel contents -->
-        <div class="card-header">Toppings</div>
+        <div class="card-header">Toppings (Add Up to 3)</div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item"> Mushrooms ($0.25)
             <label class="switch ">
@@ -97,9 +88,11 @@
         </ul>
       </div>
     </div>
-    <button type="submit" class="btn btn-lg btn-primary price-btn">Order</button>
   </div>
+  <button type="submit" class="btn btn-lg btn-primary price-btn">Order</button>
   </form>
   <div id="price-results">
+  </div>
+  <div id="test">
   </div>
 </div>
