--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="col-md-6">
       <div class="card" style="margin:50px 0"> 
         <!-- Default panel contents -->
-        <div class="card-header">Size (Choose One)</div>
+        <div class="card-header">Size (Choose One - All Sizes Start with Only Cheese)</div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item"> Medium  ($8)
             <label class="switch ">
